--- a/_config.yml
+++ b/_config.yml
@@ -2,21 +2,21 @@
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
 permalink:           pretty
-relative_permalinks: true
+
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
+title:               Blog
+tagline:             'A Blog by Jesse Kirimi'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
-baseurl:             ''
+url:                 http://kirimijesse.github.io
+baseurl:             '/lanyon'
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Jesse Kirimi
+  url:               https://twitter.com/kirimijesse
+  email:             rimijessse@outlook.com
 
 # Custom vars
 version:             1.0.0
