--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:               Blog
 tagline:             'A Blog by Jesse Kirimi'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:                 http://kirimijesse.github.io
-baseurl:             '/lanyon'
+baseurl:             '/blog'
 paginate:            5
 
 # About/contact
