--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ permalink:           pretty
 
 
 # Setup
-title:               Blog
-tagline:             'A Blog by Jesse Kirimi'
+title:               Jesse Kirimi
+tagline:             'A software developer from Nairobi Kenya'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:                 http://kirimijesse.github.io
 baseurl:             '/blog'
