--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ paginate:            5
 # About/contact
 author:
   name:              Jesse Kirimi
-  url:               https://twitter.com/kirimijesse
+  url:               https://twitter.com/kirimi_jesse
   email:             rimijessse@outlook.com
 
 # Custom vars
