--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ permalink:           pretty
 
 # Setup
 title:               Jesse Kirimi
-tagline:             'A software developer from Nairobi Kenya'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+tagline:             ''
+description:         'A software developer from Nairobi Kenya'
 url:                 http://kirimijesse.github.io
-baseurl:             '/blog'
+baseurl:             '/blog/'
 paginate:            5
 
 # About/contact
@@ -17,6 +17,3 @@ author:
   name:              Jesse Kirimi
   url:               https://twitter.com/kirimi_jesse
   email:             rimijessse@outlook.com
-
-# Custom vars
-version:             1.0.0
