--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:               Jesse Kirimi
 tagline:             ''
 description:         'A software developer from Nairobi Kenya'
 url:                 http://kirimijesse.github.io
-baseurl:             ''
+baseurl:             '/lanyon'
 paginate:            5
 
 # About/contact
